added new command "conf" which retreive a running configuration.
